# korobok

./: .gitignore  Cargo.toml
src/: container_dir.rs  korobok.rs  lib.rs  main.rs  namespaces.rs  options.rs  run_container.rs  syscall.rs
src/korobok_cli/: korobok.rs  parser.rs  runner.rs
