[package]
name = "korobok"
version = "0.1.0"
edition = "2021"

[lib]
name = "libkorobok"
path = "src/lib.rs"

[[bin]]
name = "korobok"
path = "src/korobok_cli/korobok.rs"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
clone3 = "0.2.3"
interprocess = "2.2.1"
libc = "0.2.162"
rand = "0.8.5"
sys-mount = "3.0.1"
tempdir = "0.3.7"
